census_web_app_2

--- a/close.html
+++ b/close.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>census web app_user</title>
+    <style>
+        body {
+            background-color:  #3e4061;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        h2 {
+            margin-top: 200px;
+            font-size: 36px;
+        }
+
+        p {
+            font-size: 24px;
+        }
+    </style>
+
 </head>
 <body>
     <p><h2>Census Complete</h2></p>
