--- a/index.html
+++ b/index.html
@@ -5,6 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>census web app_user</title>
 
+    <style>
+      /* Set the background color of the body to dark green */
+      body {
+        background-color: #558809;
+      }
+
+      /* Style the title of the form */
+      h1 {
+        color: white;
+        font-size: 36px;
+        font-weight: bold;
+        text-transform: uppercase;
+        text-align: center;
+        margin-top: 50px;
+      }
+
+      /* Style the instruction text */
+      p {
+        color: white;
+        font-size: 24px;
+        margin-top: 50px;
+        margin-left: 50px;
+        
+      }
+
+      /* Style the input field */
+      input[type=number] {
+        width: 200px;
+        height: 40px;
+        border: none;
+        border-radius: 5px;
+        margin-left: 50px;
+        margin-top: 20px;
+        padding-left: 10px;
+        font-size: 20px;
+      }
+
+      /* Style the button */
+      button {
+        width: 100px;
+        height: 40px;
+        background-color: white;
+        border: none;
+        border-radius: 5px;
+        margin-left: 20px;
+        margin-top: 20px;
+        font-size: 20px;
+        font-weight: bold;
+        color: #0b6623;
+      }
+
+      /* Style the button on hover */
+      button:hover {
+        background-color: #0b6623;
+        color: white;
+        cursor: pointer;
+      }
+  </style>
 </head>
 
 
