--- a/sorry.html
+++ b/sorry.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>census web app_user</title>
+
+    <style>
+        body {
+            background-color: #880404;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        
+        h2 {
+            margin-bottom: 50px;
+        }
+
+        p {
+            margin-top: 20px;
+        }
+    </style>
+
 </head>
 <body>
     <p><h2>SORRY!</h2></p>
